<resources>
	<string name="app_name">Noties</string>
	<string name="action_settings">Settings</string>
	<string name="ok_button">OK</string>
	<string name="yes_button">Yes</string>
	<string name="cancel_button">Cancel</string>
	<string name="stop_button">stop</string>
	<string name="not_now_button">Not now</string>
	<string name="continue_button">Continue</string>
	<string name="save_button">Save</string>
	<string name="rename_button">Rename</string>
	<string name="go_to_settings_button">Go to settings</string>
	<string name="delete_button">Delete</string>
	<string name="done_button">Done</string>
	<string name="update_button">Update</string>
	<string name="all_notes">All Notes</string>
	<string name="reminders">Reminders</string>
	<string name="protected_notes">Protected Notes</string>
	<string name="archived_notes">Archived Notes</string>
	<string name="user_wallpaper">Wallpaper</string>
	<string name="set_wallpaper">Set wallpaper</string>
	<string name="no_wallpaper">No wallpaper</string>
	<string name="onboarding_message">Noties is a note taking app that will help you to take notes, make to-do lists and add attachments like images, videos or audios.</string>
	<string name="notes_fragment_label">Notes</string>
	<string name="open_drawer">Open drawer</string>
	<string name="urls_fragment_label">Urls</string>
	<string name="make_todo_list">Make to-do list</string>
	<string name="add_note">Add a new note.</string>
	<string name="empty_notes_message">No notes here</string>
	<string name="delete_note">Delete</string>
	<string name="archive_note">Archive</string>
	<string name="unarchive_note">Unarchive</string>
	<string name="deleted_note">Deleted note</string>
	<string name="archived_note">Archived note</string>
	<string name="unarchived_note">Unarchived note</string>
	<string name="undo">Undo</string>
	<string name="search_notes">Search your notes</string>
	<string name="sort_notes">Sort notes…</string>
	<string name="sort_by_content">By content</string>
	<string name="sort_by_last_edit">By last edit</string>
	<string name="sort_by_title">By title</string>
	<string name="linear_layout_view">Single column view</string>
	<string name="grid_layout_view">Multicolumn view</string>
	<string name="set_user_account">Set account</string>
	<string name="empty_note_deleted">Empty note deleted</string>
	<string name="error_no_auth">Error. The device is not secured with a PIN, pattern or password.</string>
	<string name="confirme_device_credential_title">Protected note</string>
	<string name="confirme_device_credential_desc">To continue, please unlock your device to see the contents of this note.</string>
	<string name="error_auth">Error. Unable to verify your identity.</string>
	<string name="navigate_editor">Navigate to editor</string>
	<string name="enter_multiselection_mode">Enter multiselection mode</string>
	<string name="recycle_bin">Trash</string>
	<string name="empty_trash">Empty Trash</string>
	<string name="empty_trash_message">Trash is empty</string>
	<string name="empty_trash_question">Empty Trash?</string>
	<string name="empty_trash_message_warning">All notes in Trash will be permanently deleted.</string>
	<string name="delete_forever">Delete forever</string>
	<string name="restore_note">Restore notes</string>
	<string name="pinned_notes_header">Pinned</string>
	<string name="archived_notes_header">Archived</string>
	<string name="other_notes_header">Other</string>
	<string name="tags_fragment_label">Tags</string>
	<string name="empty_tags_message">No tags here</string>
	<string name="create_tag">Create tag</string>
	<string name="search_tags">Search your tags</string>
	<string name="more_options">More options</string>
	<string name="new_tag">New tag</string>
	<string name="update_tag">Update tag</string>
	<string name="tag_name">Tag name</string>
	<string name="error_message_tag_duplicate">The tag already exists</string>
	<string name="rename_tag">Rename tag</string>
	<string name="delete_tag">Delete tag</string>
	<string name="delete_tag_question">Delete tag?</string>
	<string name="delete_tag_message">This tag will be deleted and removed from all notes associated with it. Notes will not be deleted.</string>
	<string name="back_button_description">Back to notes</string>
	<string name="back_to_editor">Back to editor</string>
	<string name="delete_notes">Delete notes</string>
	<string name="pin_note">Pin note</string>
	<string name="unpin_note">Unpin note</string>
	<string name="lock_note">Lock note</string>
	<string name="unlock_note">Unlock note</string>
	<string name="device_not_secured">It is not possible to lock the note. The device is not secured with a PIN, pattern or password.</string>
	<string name="move_note">Move notes…</string>
	<string name="move_notes_title">Move notes to</string>
	<string name="select_all">Select all</string>
	<string name="delete_notes_title">Delete notes</string>
	<string name="delete_notes_question">Are you sure you want to <annotation format="bold">delete permanently</annotation> the selected notes?</string>
	<string name="exit_multiselection_mode">Exit multiselection mode</string>
	<string name="editor">Title</string>
	<string name="editor_content">Editor content</string>
	<string name="placeholder">Write here…</string>
	<string name="demo_content">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
	<string name="toolbar_back_button_description">Back to Notes</string>
	<string name="clear_note_title_text">Clear note title text</string>
	<string name="note_modified_date">Last edit: %s</string>
	<string name="pick_note_color">Pick color for note</string>
	<string name="color">Color</string>
	<string name="share_content">Share content</string>
	<string name="play">This image is a thumbnail of a video.</string>
	<string name="empty_note_share">The note does not have content to share.</string>
	<string name="open_url">Open</string>
	<string name="label_url">Url source</string>
	<string name="url_copied_msg">Url copied to clipboard</string>
	<string name="open_file">Open text file</string>
	<string name="error_open_file">Error. File could not be opened.</string>
	<string name="error_open_image">Error. Image not found.</string>
	<string name="save_file">Save as text file</string>
	<string name="file_name_if_title_not_set">Untitled note</string>
	<string name="empty_note_save">Empty note. Nothing to save.</string>
	<string name="error_save_file">Error saving file.</string>
	<string name="note_saved">The note has been saved</string>
	<string name="note_updated">The note has been updated</string>
	<string name="stt_prompt">Speak now!</string>
	<string name="error_stt">Error. Your device does not support speech to text functionality.</string>
	<string name="chooser_dialog_title">Share the content of your note</string>
	<string name="drag_item">Drag todo item</string>
	<string name="remove_item">Remove todo item</string>
	<string name="new_todo_item">Todo item</string>
	<string name="hide_checkboxes">Hide checkboxes</string>
	<string name="check_all_checkboxes">Check all checkboxes</string>
	<string name="uncheck_all_checkboxes">Uncheck all checkboxes</string>
	<string name="note_locked">Note locked</string>
	<string name="note_unlocked">Note unlocked</string>
	<string name="note_pinned">Note will be pinned</string>
	<string name="note_unpinned">Note will be unpinned</string>
	<string name="loading_text">Loading text…</string>
	<string name="restore_from_trash">Restore note</string>
	<string name="url_without_title_metadata">No title found for this url</string>
	<string name="url_without_host_metadata">No host found for this url</string>
	<string name="text_editor_menu_fragment_label">Text editor menu attachments</string>
	<string name="gallery">Gallery</string>
	<string name="camera">Camera</string>
	<string name="write_external_storage_permission_rationale">To keep your captured memories safe and accessible, Noties needs permission to access your gallery. This will allow Noties to save the picture or video you take with the camera, so you can view, edit, or share it later.</string>
	<string name="take_picture">Take picture</string>
	<string name="take_video">Record video</string>
	<string name="audio">Audio</string>
	<string name="todo_list">To-do list</string>
	<string name="reminder">Reminder</string>
	<string name="tags">Tags</string>
	<string name="user_generated_image">Image added by the user</string>
	<string name="image_saved">Picture saved</string>
	<string name="error_take_picture">No photo was taken.</string>
	<string name="error_take_video">No video was recorded.</string>
	<string name="permission_denied">Permission denied.</string>
	<string name="image_attachment">Image attached to the note.</string>
	<string name="post_notifications_permission_rationale">To ensure you never miss an important task, Noties needs permission to send notifications to your device. This way, you will receive alerts for all your reminders, keeping you organized.</string>
	<string name="share_item">Share</string>
	<string name="copy_image">Copy</string>
	<string name="download_item">Save</string>
	<string name="download_video_message">Saving video…</string>
	<string name="video_downloaded_message">Video saved in your device.</string>
	<string name="image_downloaded_message">Image saved in your device.</string>
	<string name="delete_item">Delete</string>
	<string name="set_image_as">Set image as</string>
	<string name="delete_all_items">Delete all images</string>
	<string name="delete_all_items_question">Are you sure you want to delete all the images attached to this note?</string>
	<string name="label_image">Image</string>
	<string name="image_copied_msg">Image copied to clipboard</string>
	<string name="error_video_playback">Error. This video cannot be played.</string>
	<string name="print_image">Print image</string>
	<string name="rotate">Rotate</string>
	<string name="print_image_job_name">Image_%d</string>
	<string name="error_print_image">Error. Image could not be printed.</string>
	<string name="init_print_dialog">Preparing image…</string>
	<string name="date_hint">Reminder date</string>
	<string name="time_hint">Reminder time</string>
	<string name="today">Today</string>
	<string name="tomorrow">Tomorrow</string>
	<string name="next_week">Next week</string>
	<string name="select_date_title">Select a date</string>
	<string name="select_date">Select a date…</string>
	<string name="five_minutes">5 minutes</string>
	<string name="fifteen_minutes">15 minutes</string>
	<string name="thirty_minutes">30 minutes</string>
	<string name="one_hour">1 hour</string>
	<string name="select_time_title">Select a time</string>
	<string name="select_time">Select a time…</string>
	<string name="exact_alarm_message">Exact reminder</string>
	<string name="exact_alarm_permission_rationale">In order to allow Noties to deliver reminders on time make sure to enable it in your device alarm and reminders settings.</string>
	<string name="noties_channel_description">Noties notifications</string>
	<string name="notification_text">This is a Noties notification.</string>
	<string name="settings">Settings</string>
	<string name="about_app">About Noties</string>
	<string name="version">Version</string>
	<string name="app_privacy_policy">Privacy Policy</string>
	<string name="delete_audio">Delete audio</string>
	<string name="audio_progress_desc">Audio progress</string>
	<string name="play_audio">Play/pause audio</string>
</resources>