<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto">
	<item
		android:id="@+id/delete_notes"
		android:orderInCategory="1"
		android:title="@string/delete_notes"
		android:icon="@drawable/ic_delete_forever"
		app:showAsAction="always" />

	<item
		android:id="@+id/lock_note"
		android:orderInCategory="2"
		android:title="@string/lock_note"
		android:icon="@drawable/ic_lock_note"
		app:showAsAction="always" />

	<item
		android:id="@+id/pin_note"
		android:orderInCategory="3"
		android:title="@string/pin_note"
		android:icon="@drawable/ic_pin_note"
		app:showAsAction="always"
		tools:ignore="AlwaysShowAction" />

	<item
		android:id="@+id/select_all"
		android:orderInCategory="5"
		android:title="@string/select_all"
		android:icon="@drawable/ic_select_all"
		app:showAsAction="ifRoom" />
</menu>