<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/group_notes"
        android:checkableBehavior="single"
        android:orderInCategory="0">

        <item
            android:id="@+id/nav_all_notes"
            android:checkable="true"
            android:icon="@drawable/ic_note"
            android:orderInCategory="0"
            android:title="@string/all_notes" />

        <item
            android:id="@+id/nav_reminders"
            android:checkable="true"
            android:icon="@drawable/ic_reminder"
            android:orderInCategory="0"
            android:title="@string/reminders" />

        <item
            android:id="@+id/nav_protected_notes"
            android:checkable="true"
            android:icon="@drawable/ic_lock_note"
            android:orderInCategory="0"
            android:title="@string/protected_notes" />
    </group>

    <group
        android:id="@+id/group_tags"
        android:checkableBehavior="single"
        android:orderInCategory="1">

        <item
            android:id="@+id/nav_tags"
            android:orderInCategory="1"
            android:title="@string/tags_fragment_label">

            <menu>
                <!-- Items will be added here dynamically -->
                <item
                    android:id="@+id/nav_create_tag"
                    android:checkable="true"
                    android:icon="@drawable/ic_create_tag"
                    android:orderInCategory="1000"
                    android:title="@string/create_tag" />
            </menu>
        </item>
    </group>

    <group
        android:id="@+id/group_others"
        android:checkableBehavior="single"
        android:orderInCategory="1001">

        <item
            android:id="@+id/nav_archived_notes"
            android:checkable="true"
            android:icon="@drawable/ic_archive"
            android:orderInCategory="1001"
            android:title="@string/archived_notes" />

        <item
            android:id="@+id/nav_notes_by_tag"
            android:icon="@drawable/ic_delete"
            android:menuCategory="secondary"
            android:orderInCategory="1001"
            android:title="@string/recycle_bin_fragment_label" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:menuCategory="secondary"
            android:orderInCategory="1001"
            android:title="@string/action_settings" />
    </group>
</menu>