<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:orientation="vertical"
	tools:context="ui.reminders.DateTimePickerDialogFragment">

	<com.google.android.material.textfield.TextInputLayout
		style="@style/Widget.App.ExposedDropdownMenu"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_margin="16dp"
		android:hint="@string/date_hint">

		<io.github.xamdr.noties.ui.views.MaterialSpinner
			android:id="@+id/spinner_date"
			android:layout_width="match_parent"
			android:layout_height="wrap_content" />
	</com.google.android.material.textfield.TextInputLayout>

	<com.google.android.material.textfield.TextInputLayout
		style="@style/Widget.App.ExposedDropdownMenu"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_margin="16dp"
		android:hint="@string/time_hint">

		<io.github.xamdr.noties.ui.views.MaterialSpinner
			android:id="@+id/spinner_time"
			android:layout_width="match_parent"
			android:layout_height="wrap_content" />
	</com.google.android.material.textfield.TextInputLayout>

	<com.google.android.material.checkbox.MaterialCheckBox
		android:id="@+id/exact_alarm_pref"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginHorizontal="16dp"
		android:text="@string/exact_alarm_message"
		android:visibility="gone"
		tools:visibility="visible" />
</LinearLayout>