<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="wrap_content">

	<ImageButton
		android:id="@+id/drag_item"
		android:layout_width="48dp"
		android:layout_height="48dp"
		android:background="@null"
		android:contentDescription="@string/drag_item"
		android:padding="4dp"
		android:src="@drawable/ic_drag_item"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toStartOf="@id/check_item"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent" />

	<com.google.android.material.checkbox.MaterialCheckBox
		android:id="@+id/check_item"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text=""
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintStart_toEndOf="@id/drag_item"
		app:layout_constraintTop_toTopOf="parent" />

	<io.github.xamdr.noties.ui.views.MultiLineActionEditText
		android:id="@+id/task_item"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:background="@null"
		android:hint="@string/placeholder"
		android:imeOptions="actionDone|flagNoFullscreen"
		android:importantForAutofill="no"
		android:inputType="textMultiLine|textCapSentences"
		android:minHeight="48dp"
		android:padding="8dp"
		android:scrollbars="none"
		android:scrollHorizontally="false"
		android:text="@={item.content}"
		android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
		android:textCursorDrawable="@drawable/cursor_color"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toStartOf="@id/remove_item"
		app:layout_constraintStart_toEndOf="@id/check_item"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_goneMarginEnd="48dp"/>

	<ImageButton
		android:id="@+id/remove_item"
		android:layout_width="48dp"
		android:layout_height="48dp"
		android:background="?attr/selectableItemBackgroundBorderless"
		android:contentDescription="@string/remove_item"
		android:padding="4dp"
		android:src="@drawable/ic_remove_item"
		android:visibility="gone"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toEndOf="@id/task_item"
		app:layout_constraintTop_toTopOf="parent"
		tools:visibility="visible"/>
</androidx.constraintlayout.widget.ConstraintLayout>