<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".ui.onboarding.WelcomeFragment">

	<TextView
		android:id="@+id/app_name"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="@dimen/margin_top_onboarding"
		android:layout_marginBottom="@dimen/margin_bottom_onboarding"
		android:text="@string/app_name"
		android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
		android:textStyle="bold"
		app:layout_constraintBottom_toTopOf="@id/image_view"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent" />

	<ImageView
		android:id="@+id/image_view"
		android:layout_width="144dp"
		android:layout_height="144dp"
		android:layout_marginTop="@dimen/margin_top_onboarding"
		android:layout_marginBottom="@dimen/margin_bottom_onboarding"
		android:importantForAccessibility="no"
		android:scaleType="centerCrop"
		android:src="@drawable/ic_note"
		app:layout_constraintBottom_toTopOf="@id/message"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@id/app_name" />

	<TextView
		android:id="@+id/message"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginStart="32dp"
		android:layout_marginTop="@dimen/margin_top_onboarding"
		android:layout_marginEnd="32dp"
		android:layout_marginBottom="@dimen/margin_bottom_onboarding"
		android:justificationMode="inter_word"
		android:minLines="2"
		android:text="@string/onboarding_message"
		android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
		app:layout_constraintBottom_toTopOf="@id/next_button"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@id/image_view"
		tools:targetApi="o" />

	<com.google.android.material.button.MaterialButton
		android:id="@+id/next_button"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="@dimen/margin_top_onboarding"
		android:layout_marginBottom="@dimen/margin_bottom_onboarding"
		android:text="@string/continue_button"
		android:textColor="?attr/colorSurface"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@id/message" />
</androidx.constraintlayout.widget.ConstraintLayout>
