<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools">

	<androidx.constraintlayout.widget.ConstraintLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:background="?attr/colorOnPrimary">

		<ImageButton
			android:id="@+id/play_pause"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_margin="5dp"
			android:background="?attr/selectableItemBackground"
			android:minWidth="48dp"
			android:minHeight="48dp"
			android:src="@drawable/ic_play"
			android:contentDescription="@string/play_audio"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintEnd_toStartOf="@id/position"
			app:layout_constraintTop_toTopOf="parent"
			app:layout_constraintBottom_toBottomOf="parent" />

		<TextView
			android:id="@+id/position"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			android:layout_margin="5dp"
			android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
			app:layout_constraintStart_toEndOf="@id/play_pause"
			app:layout_constraintEnd_toStartOf="@id/progress"
			app:layout_constraintTop_toTopOf="parent"
			app:layout_constraintBottom_toBottomOf="parent"
			tools:text="00:00" />

		<com.google.android.material.slider.Slider
			android:id="@+id/progress"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:layout_gravity="center"
			android:layout_margin="5dp"
			android:contentDescription="@string/audio_progress_desc"
			app:layout_constraintStart_toEndOf="@id/position"
			app:layout_constraintEnd_toStartOf="@id/duration"
			app:layout_constraintTop_toTopOf="parent"
			app:layout_constraintBottom_toBottomOf="parent" />

		<TextView
			android:id="@+id/duration"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_margin="5dp"
			android:layout_gravity="center"
			android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
			app:layout_constraintStart_toEndOf="@id/progress"
			app:layout_constraintEnd_toStartOf="@id/delete"
			app:layout_constraintTop_toTopOf="parent"
			app:layout_constraintBottom_toBottomOf="parent"
			tools:text="02:16" />

		<ImageButton
			android:id="@+id/delete"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_margin="5dp"
			android:background="?attr/selectableItemBackground"
			android:minWidth="48dp"
			android:minHeight="48dp"
			android:src="@drawable/ic_delete_forever"
			android:contentDescription="@string/delete_audio"
			app:layout_constraintStart_toEndOf="@id/duration"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintTop_toTopOf="parent"
			app:layout_constraintBottom_toBottomOf="parent" />
	</androidx.constraintlayout.widget.ConstraintLayout>
</layout>